// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingPage render::No Models 1`] = `
<div
  data-testid="landing-page"
>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-split"
    >
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="pf-l-split__item pf-m-fill"
=======
        class="pf-l-split__item"
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
        class="pf-l-split__item pf-m-fill"
>>>>>>> Simple updates following peer review.
=======
        class="pf-l-split__item"
>>>>>>> Tidy-up following rebase with FAI-183
      >
        <div
          class="pf-c-content"
        >
          <h2
            class="pf-c-title pf-m-3xl"
          >
            path
          </h2>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> Tidy-up following rebase with FAI-183
        class="pf-l-split__item pf-m-fill"
      >
         
      </div>
      <div
<<<<<<< HEAD
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
>>>>>>> Simple updates following peer review.
=======
>>>>>>> Tidy-up following rebase with FAI-183
        class="pf-l-split__item"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
          data-ouia-component-id="0"
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="action-selector"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle"
            data-testid="action-selector__toggle"
            id="action-selector-id"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-text"
            >
              Actions
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar"
      data-testid="landing-page-toolbar"
      id="landing-page-toolbar"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
<<<<<<< HEAD
              <form>
                <span
                  style="display: flex;"
                >
                  <input
                    aria-invalid="false"
                    aria-label="filter models"
                    class="pf-c-form-control"
                    data-testid="landing-page-toolbar__model-filter"
                    id="model-filter-input"
                    name="model-filter-input"
                    placeholder="Filter models by name"
                    type="search"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="filter button for filter input"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="1"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="landing-page-toolbar__submit"
                    id="models-filter"
                    type="submit"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        transform=""
                      />
                    </svg>
                  </button>
                </span>
              </form>
            </div>
          </div>
=======
              <input
                aria-describedby="models-filter"
                aria-invalid="false"
                aria-label="filter models"
                class="pf-c-form-control"
                data-testid="landing-page-toolbar__model-filter"
                id="model-filter-input"
                name="model-filter-input"
                placeholder="Filter models by name"
                type="search"
                value=""
              />
              <button
                aria-disabled="false"
                aria-label="filter button for filter input"
                class="pf-c-button pf-m-control"
                data-ouia-component-id="1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="landing-page-toolbar__submit"
                id="models-filter"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
<<<<<<< HEAD
          <div
            class="pf-c-toolbar__item"
          >
            <label
              class="pf-c-switch"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Switch"
              data-ouia-safe="true"
              for="only-supported-models-switch"
            >
              <input
                aria-label=""
                aria-labelledby="only-supported-models-switch-on"
                checked=""
                class="pf-c-switch__input"
                data-testid="landing-page-toolbar__supported-models"
                id="only-supported-models-switch"
                type="checkbox"
              />
              <span
                class="pf-c-switch__toggle"
              />
              <span
                aria-hidden="true"
                class="pf-c-switch__label pf-m-on"
                id="only-supported-models-switch-on"
              >
                Show unsupported models
              </span>
              <span
                aria-hidden="true"
                class="pf-c-switch__label pf-m-off"
                id="only-supported-models-switch-off"
              >
                Hide unsupported models
              </span>
            </label>
          </div>
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
>>>>>>> More complex updates following peer review.
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="landing-page-toolbar-expandable-content-0"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <section>
      <div
        class="pf-c-empty-state pf-m-sm"
        data-testid="empty-state-no-models"
      >
        <div
          class="pf-c-empty-state__content"
        >
          <svg
            aria-hidden="true"
            class="pf-c-empty-state__icon"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M560 288h-80v96l-32-21.3-32 21.3v-96h-80c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16h224c8.8 0 16-7.2 16-16V304c0-8.8-7.2-16-16-16zm-384-64h224c8.8 0 16-7.2 16-16V16c0-8.8-7.2-16-16-16h-80v96l-32-21.3L256 96V0h-80c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16zm64 64h-80v96l-32-21.3L96 384v-96H16c-8.8 0-16 7.2-16 16v192c0 8.8 7.2 16 16 16h224c8.8 0 16-7.2 16-16V304c0-8.8-7.2-16-16-16z"
              transform=""
            />
          </svg>
          <h4
            class="pf-c-title pf-m-lg"
          >
            You don't have any PMML Models
          </h4>
          <div
            class="pf-c-empty-state__body"
          >
            PMML uses XML to represent predictive models. One or more predictive models can be contained in a PMML document.
          </div>
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-primary"
<<<<<<< HEAD
<<<<<<< HEAD
            data-ouia-component-id="2"
=======
            data-ouia-component-id="3"
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
            data-ouia-component-id="2"
>>>>>>> More complex updates following peer review.
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            data-testid="empty-state-no-models__create-model"
            type="button"
          >
            Create Model
          </button>
        </div>
      </div>
    </section>
  </section>
</div>
`;

<<<<<<< HEAD
<<<<<<< HEAD
exports[`LandingPage render::With Supported Model 1`] = `
=======
exports[`LandingPage render::With Models 1`] = `
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
exports[`LandingPage render::With Supported Model 1`] = `
>>>>>>> More complex updates following peer review.
<div
  data-testid="landing-page"
>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <div
      class="pf-l-split"
    >
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        class="pf-l-split__item pf-m-fill"
=======
        class="pf-l-split__item"
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
        class="pf-l-split__item pf-m-fill"
>>>>>>> Simple updates following peer review.
=======
        class="pf-l-split__item"
>>>>>>> Tidy-up following rebase with FAI-183
      >
        <div
          class="pf-c-content"
        >
          <h2
            class="pf-c-title pf-m-3xl"
          >
            path
          </h2>
        </div>
      </div>
      <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> Tidy-up following rebase with FAI-183
        class="pf-l-split__item pf-m-fill"
      >
         
      </div>
      <div
<<<<<<< HEAD
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
>>>>>>> Simple updates following peer review.
=======
>>>>>>> Tidy-up following rebase with FAI-183
        class="pf-l-split__item"
      >
        <div
          class="pf-c-dropdown pf-m-align-right"
<<<<<<< HEAD
<<<<<<< HEAD
          data-ouia-component-id="3"
=======
          data-ouia-component-id="4"
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
          data-ouia-component-id="3"
>>>>>>> More complex updates following peer review.
          data-ouia-component-type="PF4/Dropdown"
          data-ouia-safe="true"
          data-testid="action-selector"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="pf-c-dropdown__toggle"
            data-testid="action-selector__toggle"
            id="action-selector-id"
            type="button"
          >
            <span
              class="pf-c-dropdown__toggle-text"
            >
              Actions
            </span>
            <span
              class="pf-c-dropdown__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 320 512"
                width="1em"
              >
                <path
                  d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                  transform=""
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-c-toolbar"
      data-testid="landing-page-toolbar"
      id="landing-page-toolbar"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
<<<<<<< HEAD
              <form>
                <span
                  style="display: flex;"
                >
                  <input
                    aria-invalid="false"
                    aria-label="filter models"
                    class="pf-c-form-control"
                    data-testid="landing-page-toolbar__model-filter"
                    id="model-filter-input"
                    name="model-filter-input"
                    placeholder="Filter models by name"
                    type="search"
                    value=""
                  />
                  <button
                    aria-disabled="false"
                    aria-label="filter button for filter input"
                    class="pf-c-button pf-m-control"
                    data-ouia-component-id="4"
                    data-ouia-component-type="PF4/Button"
                    data-ouia-safe="true"
                    data-testid="landing-page-toolbar__submit"
                    id="models-filter"
                    type="submit"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align: -0.125em;"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                        transform=""
                      />
                    </svg>
                  </button>
                </span>
              </form>
            </div>
          </div>
=======
              <input
                aria-describedby="models-filter"
                aria-invalid="false"
                aria-label="filter models"
                class="pf-c-form-control"
                data-testid="landing-page-toolbar__model-filter"
                id="model-filter-input"
                name="model-filter-input"
                placeholder="Filter models by name"
                type="search"
                value=""
              />
              <button
                aria-disabled="false"
                aria-label="filter button for filter input"
                class="pf-c-button pf-m-control"
                data-ouia-component-id="4"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="landing-page-toolbar__submit"
                id="models-filter"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
<<<<<<< HEAD
          <div
            class="pf-c-toolbar__item"
          >
            <label
              class="pf-c-switch"
              data-ouia-component-id="6"
              data-ouia-component-type="PF4/Switch"
              data-ouia-safe="true"
              for="only-supported-models-switch"
            >
              <input
                aria-label=""
                aria-labelledby="only-supported-models-switch-on"
                checked=""
                class="pf-c-switch__input"
                data-testid="landing-page-toolbar__supported-models"
                id="only-supported-models-switch"
                type="checkbox"
              />
              <span
                class="pf-c-switch__toggle"
              />
              <span
                aria-hidden="true"
                class="pf-c-switch__label pf-m-on"
                id="only-supported-models-switch-on"
              >
                Show unsupported models
              </span>
              <span
                aria-hidden="true"
                class="pf-c-switch__label pf-m-off"
                id="only-supported-models-switch-off"
              >
                Hide unsupported models
              </span>
            </label>
          </div>
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
>>>>>>> More complex updates following peer review.
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="landing-page-toolbar-expandable-content-1"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <section>
      <div
        class="pf-l-gallery pf-m-gutter"
      >
        <div
          data-testid="landing-page__model-card"
        >
          <article
            class="pf-c-card pf-m-hoverable model-card"
            data-testid="model-card"
          >
            <div
              class="pf-c-card__header"
            >
              <div
                class=""
              >
                <img
                  alt="Scorecard"
                  class="model-card__icon"
                  data-testid="model-card__icon"
                  src="images/card-icon-scorecard.svg"
                />
              </div>
            </div>
            <div
              class="pf-c-card__title model-card__title"
            >
              <span
                data-testid="model-card__title"
              >
                &lt;Undefined&gt;
              </span>
            </div>
<<<<<<< HEAD
<<<<<<< HEAD
             
=======
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
             
>>>>>>> Simple updates following peer review.
            <div
              class="pf-c-card__body"
            >
              <div
                data-testid="model-card__model-type"
              >
                Scorecard
              </div>
            </div>
            <div
              class="pf-c-card__footer"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-primary"
<<<<<<< HEAD
<<<<<<< HEAD
                data-ouia-component-id="5"
=======
                data-ouia-component-id="7"
>>>>>>> FAI-183: Score Cards: Opening a PMML file story
=======
                data-ouia-component-id="5"
>>>>>>> More complex updates following peer review.
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                data-testid="model-card__delete"
                type="button"
              >
                Delete
              </button>
            </div>
          </article>
        </div>
      </div>
    </section>
  </section>
</div>
`;
